mongodb-k8s/ingress-express.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: mongo-express-ingress
spec:
  rules:
    - host: "mongodb.devlocal.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
